force-app/main/default/objects/Book__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>Genre of the book</description>
    <label>Genre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>Fiction</fullName>
            </value>
            <value>
                <fullName>Historical fiction</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Mystery</fullName>
            </value>
            <value>
                <fullName>Non fiction</fullName>
            </value>
            <value>
                <fullName>Novel</fullName>
            </value>
            <value>
                <fullName>Romance</fullName>
            </value>
            <value>
                <fullName>Science fiction</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Tragedy</fullName>
            </value>
            <value>
                <fullName>Poetry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>