force-app/main/default/objects/Book__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language of the book</description>
    <label>Language</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>