force-app/main/default/objects/Book__c/fields/PublishingDate__c.field-meta.xml
<CustomField>
    <fullName>PublishingDate__c</fullName>
    <description>Publishing date of the book</description>
    <label>Publishing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>