force-app/main/default/objects/Book__c/fields/PublishingHouse__c.field-meta.xml
<CustomField>
    <fullName>PublishingHouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Publishing house of the book</description>
    <label>Publishing House</label>
    <referenceTo>PublishingHouse__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <type>Lookup</type>
</CustomField>